02-exposed-dashboard/apps/kube-web-view/insecure-deploy/insecure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web-dashboard
  name: kube-web-view-insecure
spec:
  ingressClassName: nginx
  rules:
  - host: rus-vote.seck8s.slurm.io  # was empty => default backend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-web-view
            port:
              number: 80
